--- a/public/css/app.css
+++ b/public/css/app.css
@@ -340,7 +340,10 @@ h3 {
 
 .features-text {
   font-size: 24px;
-  max-width: 500px;
+}
+
+.recipes-text {
+  font-size: 24px;
 }
 
 .single-benefit {
@@ -391,6 +394,23 @@ h3 {
   }
 
   .features-wrapper {
+    display: block;
+  }
+
+  .features-text {
+    font-size: 18px !important;
+    line-height: 1.8;
+  }
+
+  .recipes-text {
+    font-size: 18px !important;
+    line-height: 1.8;
+    text-align: left;
+  }
+}
+
+@media (max-width: 992px) {
+  #desktop-wrapper {
     display: block;
   }
 }
