--- a/resources/assets/sass/critical.scss
+++ b/resources/assets/sass/critical.scss
@@ -66,6 +66,9 @@ nav ul li a {
   nav ul li a {
     font-size: 20px;
   }
+  .features-text {
+    max-width: 500px;
+  }
 
   .landing-page-title {
     font-size: 40px !important;
@@ -79,6 +82,10 @@ nav ul li a {
     height: 58px !important;
   }
 
+  #subtitle {
+    font-size: 40px;
+  }
+
   .image_icon {
     max-height: 58px !important;
   }
@@ -90,6 +97,7 @@ nav ul li a {
   .hero {
     min-width: 450px;
   }
+
   .homepage_container_grey {
     padding: 20px;
   }
@@ -159,6 +167,10 @@ nav ul li a {
 }
 
 .hero {
+  text-align: center;
+}
+
+.hero-2 {
   text-align: center;
 }
 
@@ -291,11 +303,15 @@ nav ul li a {
   }
   #phone-pic {
     height: auto;
-    width: 100%;
+    max-width: 350px;
   }
 
-  .features-text {
-    font-size: 18px !important;
+  .photo {
+    text-align: center;
+  }
+
+  #subtitle {
+    font-size: 28px;
   }
 }
 
