--- a/public/css/app.css
+++ b/public/css/app.css
@@ -397,6 +397,14 @@ h3 {
     display: block;
   }
 
+  .footer_category {
+    width: 100% !important;
+  }
+
+  .green_footer {
+    display: block !important;
+  }
+
   .features-text {
     font-size: 18px !important;
     line-height: 1.8;
@@ -891,5 +899,65 @@ input .user-input #email {
   -webkit-box-shadow: 0;
           box-shadow: 0;
   display: inline;
+}
+
+.green_footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: #26ce81;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 15px 50px 30px 50px;
+}
+
+.green_footer h4 {
+  color: white;
+  text-transform: uppercase;
+}
+
+.green_footer ul {
+  list-style: none;
+  padding: 0;
+}
+
+.green_footer li {
+  padding-bottom: 10px;
+}
+
+.green_footer a {
+  color: #4a4a4a;
+}
+
+.footer_category {
+  margin: 0 10px 0 10px;
+}
+
+.footer_category p {
+  font-size: 18px;
+  color: #4a4a4a;
+}
+
+@media (min-width: 768px) {
+  #recipes_footer {
+    width: 18%;
+  }
+
+  #resources_footer {
+    width: 28%;
+  }
+
+  #tools_footer {
+    width: 23%;
+  }
+
+  #about_footer {
+    width: 23%;
+  }
+
+  .green_footer {
+    padding: 15px 50px 30px 80px;
+  }
 }
 
