--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -741,6 +741,10 @@ input .user-input #email {
   font-style: italic;
 }
 
+.onboarding-instructions {
+  font-size: 18px;
+}
+
 .quiz_item {
   flex: 1;
   list-style: none;
