--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -150,7 +150,7 @@ h3 {
 .styled-link {
   color: $vegaroo-primary-color;
   font-weight: 900;
-  font-size: 24px;
+  font-size: 38px;
   cursor:pointer;
 }
 
@@ -502,6 +502,21 @@ h3 {
 
 .other-recipes {
   text-align: center;
+}
+
+.category_title {
+  text-align: center;
+  font-size: 36px;
+}
+
+.recipe-info {
+  color: black;
+}
+
+.recipe-info-wrapper {
+  display: flex;
+  justify-content: space-evenly;
+  color: black;
 }
 
 .green {
