tweaks to landing page

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -123,6 +123,11 @@ h3 {
   box-shadow: 0 2px 20px rgba(0,0,0,.15);
 }
 
+.homepage-call-out { 
+  color: $vegaroo-primary-color;
+  font-weight: bold;
+}
+
 .call-out {
   text-transform: uppercase;
   font-size: 24px;
