format and functionality for password reset

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -997,6 +997,10 @@ input .user-input #email {
   .green_footer {
     padding: 15px 50px 30px 80px;
   }
+
+  .row_item {
+    max-width: 19%;
+  }
 }
 
 #call_to_action_btn {
