--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -875,6 +875,10 @@ input .user-input #email {
   .green_footer {
     padding: 15px 50px 30px 80px;
   }
+
+  .row_item {
+    max-width: 19%;
+  }
 }
 #call_to_action_btn {
   background-color: $vegaroo-secondary-color;
