basic outline for reminder system

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -109,6 +109,10 @@ h3 {
   padding-top: 25px;
 }
 
+.btn-wrapper-profile {
+  padding: 25px 0 25px 0;
+}
+
 .btn {
   padding: 10px 20px;
   background-color: $vegaroo-primary-color;
