--- a/public/css/app.css
+++ b/public/css/app.css
@@ -108,6 +108,10 @@ h3 {
   padding-top: 25px;
 }
 
+.btn-wrapper-profile {
+  padding: 25px 0 25px 0;
+}
+
 .btn {
   padding: 10px 20px;
   background-color: #26ce81;
